# Meta-Hackathon

./: .gitignore  Dockerfile  LICENSE  README.md  agent_utils.py  baseline_inference.py  demo_run.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_eval.py
data/: orders.csv
server/: Dockerfile  app.py  ui.html
tasks/: tasks.json
