[project]
name = "csv-analyst-env"
version = "0.1.0"
description = "CSVAnalystEnv for the Meta PyTorch OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "pydantic>=2.0.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "requests>=2.31.0",
  "huggingface_hub>=0.20.0",
  "openenv>=0.1.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
